@@ -75,18 +75,10 @@ UdpClientHelper::UdpClientHelper (Address address, uint16_t port)
   SetAttribute ("RemotePort", UintegerValue (port));
 }
 
-UdpClientHelper::UdpClientHelper (Ipv4Address address, uint16_t port)
+UdpClientHelper::UdpClientHelper (Address address)
 {
   m_factory.SetTypeId (UdpClient::GetTypeId ());
-  SetAttribute ("RemoteAddress", AddressValue (Address(address)));
-  SetAttribute ("RemotePort", UintegerValue (port));
-}
-
-UdpClientHelper::UdpClientHelper (Ipv6Address address, uint16_t port)
-{
-  m_factory.SetTypeId (UdpClient::GetTypeId ());
-  SetAttribute ("RemoteAddress", AddressValue (Address(address)));
-  SetAttribute ("RemotePort", UintegerValue (port));
+  SetAttribute ("RemoteAddress", AddressValue (address));
 }
 
 void
@@ -121,19 +113,10 @@ UdpTraceClientHelper::UdpTraceClientHelper (Address address, uint16_t port, std:
   SetAttribute ("TraceFilename", StringValue (filename));
 }
 
-UdpTraceClientHelper::UdpTraceClientHelper (Ipv4Address address, uint16_t port, std::string filename)
+UdpTraceClientHelper::UdpTraceClientHelper (Address address, std::string filename)
 {
   m_factory.SetTypeId (UdpTraceClient::GetTypeId ());
-  SetAttribute ("RemoteAddress", AddressValue (Address (address)));
-  SetAttribute ("RemotePort", UintegerValue (port));
-  SetAttribute ("TraceFilename", StringValue (filename));
-}
-
-UdpTraceClientHelper::UdpTraceClientHelper (Ipv6Address address, uint16_t port, std::string filename)
-{
-  m_factory.SetTypeId (UdpTraceClient::GetTypeId ());
-  SetAttribute ("RemoteAddress", AddressValue (Address (address)));
-  SetAttribute ("RemotePort", UintegerValue (port));
+  SetAttribute ("RemoteAddress", AddressValue (address));
   SetAttribute ("TraceFilename", StringValue (filename));
 }
 
